página de cortes

--- a/cortes.html
+++ b/cortes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/cortes.css">
     <title>Barber shop</title>
 </head>
 <body>
@@ -20,31 +20,41 @@
                 </nav>
             </div>
         </header>
-        <main class="main-banner">
-            <div class="banner">
-                <p>Aqui barba,<br>
-                cabelo e bigode <br>
-                são coisas sérias!</p>
+        <main class="main-galery">
+                <h1>cortes da barbearia</h1>
+            <span class="galery">
                 <figure>
-                    <img src="img/Corte-Line-Up-para-Homens-1.jpg" alt="corte de cabelo">
+                    <img src="img/corte-de-cabelo-seu-estilo-03.jpg" alt="">
+                    <img src="img/cortes-de-cabelo-masculino-2022 (4).jpg" alt="">
+                    <img src="img/corte-de-cria-reflexo-alinhado-luzes-listra-819x1024.jpg" alt="">
+                    <img src="img/fade-drop-ass-Caio-Ribeiro-2.jpg.webp" alt="">
+                    <img src="img/cacheado-volumoso-cima.jpg" alt="">
+                    <img src="img/best-haircuts-for-men-short-blowout-low-fade-683x1024.jpg.webp" alt="">
+                    <img src="img/oar2.jpg" alt="">
+                    <img src="img/corte-cabelo-masculino-disfarçado4.jpg" alt="">
+                
                 </figure>
-            </div> 
-        </main>
-            <h1 id="title">Cortes em Destaque</h1>
-            <div class="cut">
-                <img src="img/cabelo-cacheado-2.jpg" alt="corte cacheado">
-                <img src="img/Corte-de-cabelo-masculino-crespo-americano-4.jpg" alt="corte americano">
-                <img src="img/c3fa891a701b06104f14e50800a85c08.jpg" alt="corte taper">
+            </span>
+            <div class="pacote">
+                <h3>planos da barbearia</h3>
             </div>
-            <section id="video-c">
-                <p>um pouco <br>
-                    do nosso <br>
-                    trabalho!</p>
-                <video src="video/Vídeo sem título - Feito com Clipchamp.mp4" controls></video>
+            <section class="value">
+                <ul>
+                   <li>R$ 40,00</li>
+                   <li>Pacote Básico</li>
+                </ul>
+                <ul>
+                    <li>R$ 70,00</li>
+                    <li>Pacote Intermediário</li>
+                </ul>
+               <ul>
+                <li>R$ 100,00</li>
+                <li>Pacote Completo</li>
+               </ul>
             </section>
-            <section id="contact">
-                <p>agendamento via watssap</p>
-                <p>contato:(11)96779-4488</p>
+            <section class="aluno">
+                <p>alunos do senac tem desconto de 30% nos <br>cortes 
+                    na barbearia localizada no largo treze.</p>
             </section>
             <footer>
                 <div class="end">
@@ -59,7 +69,7 @@
                     </div>
                 </div>
             </footer>
-
+        </main>
     </div>
 </body>
 </html>
