--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 <nav class="navbar-container">
                     <img src="img/c2888c116bf8872ce9957fa51caeb6fe-cracha-de-barbearia.png" alt="logo da barbearia">
                         <ul class="nav-items">
-                            <li><a href="#">inicio</a></li>
-                            <li><a href="#">cortes</a></li>
+                            <li><a href="index.html" target="_parent">inicio</a></li>
+                            <li><a href="cortes.html" target="_parent">cortes</a></li>
                             <li><a href="#">sobre nós</a></li>
                         </ul>        
                 </nav>
