--- a/cortes.html
+++ b/cortes.html
@@ -14,7 +14,7 @@
                     <img src="img/c2888c116bf8872ce9957fa51caeb6fe-cracha-de-barbearia.png" alt="logo da barbearia">
                         <ul class="nav-items">
                             <li><a href="index.html" target="_parent">inicio</a></li>
-                            <li><a href="cortes.html" target="_parent">cortes</a></li>
+                            <li><a href="cortes.html" target="">cortes</a></li>
                             <li><a href="#">sobre nós</a></li>
                         </ul>        
                 </nav>
@@ -24,14 +24,14 @@
                 <h1>cortes da barbearia</h1>
             <span class="galery">
                 <figure>
-                    <img src="img/corte-de-cabelo-seu-estilo-03.jpg" alt="">
-                    <img src="img/cortes-de-cabelo-masculino-2022 (4).jpg" alt="">
-                    <img src="img/corte-de-cria-reflexo-alinhado-luzes-listra-819x1024.jpg" alt="">
-                    <img src="img/fade-drop-ass-Caio-Ribeiro-2.jpg.webp" alt="">
-                    <img src="img/cacheado-volumoso-cima.jpg" alt="">
-                    <img src="img/best-haircuts-for-men-short-blowout-low-fade-683x1024.jpg.webp" alt="">
-                    <img src="img/oar2.jpg" alt="">
-                    <img src="img/corte-cabelo-masculino-disfarçado4.jpg" alt="">
+                    <img src="img/corte-de-cabelo-seu-estilo-03.jpg" alt="corte de cabelo">
+                    <img src="img/cortes-de-cabelo-masculino-2022 (4).jpg" alt="corte de cabelo">
+                    <img src="img/corte-de-cria-reflexo-alinhado-luzes-listra-819x1024.jpg" alt="corte de cabelo">
+                    <img src="img/fade-drop-ass-Caio-Ribeiro-2.jpg.webp" alt="corte de cabelo">
+                    <img src="img/cacheado-volumoso-cima.jpg" alt="corte de cabelo">
+                    <img src="img/best-haircuts-for-men-short-blowout-low-fade-683x1024.jpg.webp" alt="corte de cabelo">
+                    <img src="img/oar2.jpg" alt="corte de cabelo">
+                    <img src="img/corte-cabelo-masculino-disfarçado4.jpg" alt="corte de cabelo">
                 
                 </figure>
             </span>
